--- a/WashingWar/package.json
+++ b/WashingWar/package.json
@@ -11,7 +11,8 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
-    "react-native-reanimated": "^1.3.0"
+    "react-native-reanimated": "^1.3.0",
+    "react-native-svg": "^9.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
